update the comments of the UpdateTask function
