# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/tasks": {
             "get": {
-                "description": "get all tasks",
+                "description": "get all tasks from database",
                 "consumes": [
                     "application/json"
                 ],
@@ -82,15 +82,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Task object",
-                        "name": "task",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Task"
-                        }
                     }
                 ],
                 "responses": {
